--- a/Technology/technology-page-2/index.html
+++ b/Technology/technology-page-2/index.html
@@ -19,19 +19,17 @@
       //this is white line
       <div class="whiteLine"></div>
       <div class="navBox">
-        S
         <div class="listNav">
           <div class="Home">
-            <a href="/index.html">
-              <div class="h4">00 </div>
+            <a href="../../Home/index.html">
+              <div class="h4">00</div>
               <div class="h2">Home</div>
             </a>
           </div>
           <div class="crew">
-            <a href="/destination/destination.html">
+            <a href="../../Destination/europa/index.html">
               <div class="h4">01</div>
               <div class="h2">Destination</div>
-            </a>
           </div>
           <div class="destination">
             <a href="../../crew/crew-page-1/index.html">
@@ -40,15 +38,13 @@
             </a>
           </div>
           <div class="technology">
-            <a href="../../Technology/technology-page-1/index.html">
+            <a href="/Technology/technology-page-1/index.html">
               <div class="h4">03</div>
               <div class="h2">Technology</div>
             </a>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="container-2">
+      </div>   <div class="container-2">
       <div class="num">02</div>
       <div class="name">Meet your crew</div>
     </div>
