--- a/crew/crew-page-1/index.html
+++ b/crew/crew-page-1/index.html
@@ -19,18 +19,18 @@
       <div class="navBox">
         <div class="listNav">
           <div class="Home">
-            <a href="/index.html">
+            <a href="../../Home/index.html">
               <div class="h4">00</div>
               <div class="h2">Home</div>
             </a>
           </div>
           <div class="crew">
-            <a href="/destination/destination.html">
+            <a href="../../Destination/europa/index.html">
               <div class="h4">01</div>
               <div class="h2">Destination</div>
           </div>
           <div class="destination">
-            <a href="./destination">
+            <a href="../../crew/crew-page-1/index.html">
               <div class="h4">02</div>
               <div class="h2">Crew</div>
             </a>
