--- a/Destination/europa/index.html
+++ b/Destination/europa/index.html
@@ -28,7 +28,7 @@
     <div class="navBox">
       <div class="listNav">
         <div class="Home">
-          <a href="../../Home/index.html">
+          <a href="../../index.html">
             <div class="h4">00</div>
             <div class="h2">Home</div>
           </a>
